syntax = "proto2";
package video_streaming;

message EncryptedPlayerRequest {
  optional bytes context = 1;
  optional bytes encrypted_onesie_player_request = 2;
  optional bytes encrypted_client_key = 5;
  optional bytes iv = 6;
  optional bytes hmac = 7;
  optional string reverse_proxy_config = 9;
  optional bool serialize_response_as_json = 10;
  optional bool pM = 13;
  optional bool enable_compression = 14;
  optional bytes unencrypted_onesie_player_request = 16; 
  optional bool TQ = 17;
}