syntax = "proto2";
package video_streaming;

import "video_streaming/client_abr_state.proto";
import "video_streaming/encrypted_request.proto";
import "video_streaming/streamer_context.proto";

message OnesieInnertubeRequest {
  optional ClientAbrState client_abr_state = 2;
  optional EncryptedRequest encrypted_request = 3;
  optional bytes onesie_ustreamer_config = 4;
  optional StreamerContext streamer_context = 10; 
}