syntax = "proto2";
package video_streaming;

import "misc/common.proto";
import "video_streaming/onesie_proxy_status.proto";

message OnesieInnertubeResponse {
  optional OnesieProxyStatus onesie_proxy_status = 1;
  optional int32 http_status = 2;
  repeated .misc.HttpHeader headers = 3;
  optional bytes body = 4;
}
