syntax = "proto2";
package video_streaming;

import "misc/common.proto";

message OnesiePlayerRequest {
	optional string url = 1;
	repeated misc.HttpHeader headers = 2; 
	optional string body = 3;
	optional bool proxied_by_trusted_bandaid  = 4;
	optional bool field6 = 6; // Seen this on youtube.com and the YTMusic protos. Not sure what it is yet.
}